--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "DBApiSettings": {
+    "Url": "http://localhost:44335/api/"
+  },
+  "OAuthSettings": {
+    "Url": "http://localhost:64427/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
