#ZEXSM#clean arhitecture

--- a/src/Server.Api/appsettings.json
+++ b/src/Server.Api/appsettings.json
@@ -1,9 +1,6 @@
 {
-  "DBApiSettings": {
-    "Url": "http://localhost:44335/api/"
-  },
-  "OAuthSettings": {
-    "Url": "http://localhost:64427/"
+  "DBApiOptions": {
+    "Url": "http://localhost:5003/"
   },
   "Logging": {
     "LogLevel": {
@@ -11,6 +8,5 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
