--- a/src/Server.Api/appsettings.json
+++ b/src/Server.Api/appsettings.json
@@ -2,6 +2,9 @@
   "DBApiOptions": {
     "Url": "http://localhost:5003/"
   },
+  "OAuthOptions": {
+    "Url": "http://localhost:5001/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
