--- a/src/Server.Core/Server.Core.csproj
+++ b/src/Server.Core/Server.Core.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0" />
+    <PackageReference Include="OCCBPackage" Version="0.0.4" />
   </ItemGroup>
 
 </Project>
