#ZEXSM#fix cors

--- a/src/Server.Api/appsettings.Localhost.json
+++ b/src/Server.Api/appsettings.Localhost.json
@@ -1,9 +1,6 @@
 ﻿{
   "CorsPolicyOptions": {
-    "Origins": [ "http://localhost:3000" ],
-    "Methods": [ "GET", "POST" ],
-    "Headers": [ "Content-Type", "Accept" ],
-    "IsCredentials": true
+    "Origins": [ "http://localhost:3000" ]
   },
   "DBApiOptions": {
     "Url": "http://localhost:5003"
