--- a/src/Server.Api/appsettings.json
+++ b/src/Server.Api/appsettings.json
@@ -7,8 +7,8 @@
   },
   "CorsPolicyOptions": {
     "Origins": [ "http://localhost:3000" ],
-    "Methods": [ "GET", "POST" ],
-    "Headers": [ "Content-Type", "Accept" ],
+    "Methods": [],
+    "Headers": [ "X-Requested-With" ],
     "IsCredentials": true
   },
   "DBApiOptions": {
