--- a/src/Server.Api/Server.Api.csproj
+++ b/src/Server.Api/Server.Api.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="OCCBPackage" Version="0.0.12" />
     <PackageReference Include="Scrutor" Version="3.2.0" />
+    <PackageReference Include="Telegram.Bot" Version="15.4.0" />
     <PackageReference Include="VkNet" Version="1.49.0" />
   </ItemGroup>
 
